# minst_digit_recognition

./: .gitignore  LICENSE  README.md  accuracy.py  app.py  cnn.py  cnn_wrong_predictions.py  confusion_matrix.py  data.py  data_analysis.py  dt.py  main.py  nb.py  nn.py  nn5.py  pyproject.toml  rf.py  submission.py  svm.py  util.py
data/: README.md
minst_digit_recognition/: __init__.py  __main__.py  app.py  cnn.py  cnn_wrong_predictions.py  confusion_matrix.py  data.py  data_analysis.py  dt.py  fit.py  main.py  nb.py  nn5.py  rf.py  score.py  svm.py  util.py
minst_digit_recognition/data/: __init__.py  joblibMixin.py  joblibSerializationMixin.py
minst_digit_recognition/models/: __init__.py  base.py  dt.py  sklearn.py
minst_digit_recognition/scripts/: __init__.py  cnn_wrong_predictions.py  data_analysis.py  submission.py
mnist_digit_recognition/: __init__.py  __main__.py  app.py  confusion_matrix.py  fit.py  score.py
mnist_digit_recognition/app/: __init__.py  __main__.py  main_window.py  predict_task.py
mnist_digit_recognition/app/components/: __init__.py  canvas.py  model_picker.py
mnist_digit_recognition/data/: __init__.py  input_data.py  training_data.py
mnist_digit_recognition/models/: __init__.py  base.py  cnn.py  sklearn.py
mnist_digit_recognition/scripts/: data_analysis.py  util.py
