[tool.poetry]
name = "minst-digit-recognition"
version = "0.1.0"
description = "A small project comparing various machine learning techniques for recognizing handwritten digits, using the MNIST dataset."
authors = ["Kamil Malinowski <malinowskikam96@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
tensorflow = "^2.18.0"
keras = "^3.6.0"
pandas = "^2.2.3"
numpy = "<2.1.0"
opencv-python = "^4.10.0.84"
scikit-learn = "^1.5.2"
joblib = "^1.4.2"
keras-preprocessing = "^1.1.2"
pillow = "^11.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
