[tool.poetry]
name = "mnist-digit-recognition"
version = "0.1.0"
description = "A small project comparing various machine learning techniques for recognizing handwritten digits, using the MNIST dataset."
authors = ["Kamil Malinowski <malinowskikam96@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
tensorflow = "2.18.0"
pandas = "2.2.3"
numpy = "2.0.2"
opencv-python = "4.10.0.84"
scikit-learn = "1.5.2"
joblib = "1.4.2"
keras-preprocessing = "1.1.2"
pillow = "11.0.0"
pyqt6 = "6.7.1"

[tool.poetry.scripts]
main = "mnist_digit_recognition.__main__:main"
fit = "mnist_digit_recognition.fit:main"
score = "mnist_digit_recognition.score:main"
confusion_matrix = "mnist_digit_recognition.confusion_matrix:main"
app = "mnist_digit_recognition.app.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
